--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.220) unstable; urgency=low
+
+  * Adjust show interfaces for maximum length of interface name
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 09 Dec 2011 09:31:38 -0800
+
 vyatta-op (0.13.219) unstable; urgency=low
 
   * Add show interfaces for vrrp interfaces
