--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.221) unstable; urgency=low
+
+  * Fix a few completion problems
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 09 Dec 2011 12:16:12 -0800
+
 vyatta-op (0.13.220) unstable; urgency=low
 
   * Adjust show interfaces for maximum length of interface name
