--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.223) unstable; urgency=low
+
+  * Bugfix 7473: Display hardware model, S/N and UUID if available.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Thu, 29 Dec 2011 14:23:19 -0800
+
 vyatta-op (0.13.222) unstable; urgency=low
 
   * Add monitoring for vrrp interfaces
