--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+vyatta-op (0.13.232) unstable; urgency=low
+
+  [ Stephen Hemminger ]
+  * Add missing newline at end of file
+
+  [ John Southworth ]
+  * escape escape characters so they aren't evaluated during command
+    processing
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 14 Feb 2012 21:54:50 -0800
+
 vyatta-op (0.13.231) unstable; urgency=low
 
   * Bugfix 7774: fix quoted string variable expression
