--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.233) unstable; urgency=low
+
+  * Add bridge info to show tech support
+
+ -- Stephen Hemminger <shemminger@vyatta.com>  Tue, 21 Feb 2012 12:14:33 -0800
+
 vyatta-op (0.13.232) unstable; urgency=low
 
   [ Stephen Hemminger ]
