--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.236) unstable; urgency=low
+
+  * Add headers to show montioring command
+
+ -- John Southworth <john.southworth@vyatta.com>  Wed, 22 Feb 2012 10:11:37 -0800
+
 vyatta-op (0.13.235) unstable; urgency=low
 
   * Bugfix 2581: show protocol debugging summary with 'show monitoring'
