--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.238) unstable; urgency=low
+
+  * Add console keymap reconfigure op-mode command
+  * Suggest package dialog
+
+ -- Stephen Hemminger <shemminger@vyatta.com>  Wed, 22 Feb 2012 14:37:32 -0800
+
 vyatta-op (0.13.237) unstable; urgency=low
 
   * Handle 64 bit counters in show interfaces
