--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.241) unstable; urgency=low
+
+  * Bugfix 4053: add missing top level 'monitor interfaces'
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 28 Feb 2012 12:49:20 -0800
+
 vyatta-op (0.13.240) unstable; urgency=low
 
   * fix for bug 7719 - delete system image should accept 'y' or 'n'
