--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.243) unstable; urgency=low
+
+  * Bugfix 7555: Allow users to import ssh keys when using 'show tech-
+    support save' commands
+
+ -- John Southworth <john.southworth@vyatta.com>  Thu, 01 Mar 2012 00:54:05 +0000
+
 vyatta-op (0.13.242) unstable; urgency=low
 
   * bug fix for 7826 - fixed to use correct perl functions.
