--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.244) unstable; urgency=low
+
+  * Allow users to import ssh keys when using image commands
+
+ -- John Southworth <john.southworth@vyatta.com>  Thu, 01 Mar 2012 17:14:20 +0000
+
 vyatta-op (0.13.243) unstable; urgency=low
 
   * Bugfix 7555: Allow users to import ssh keys when using 'show tech-
