--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.245+oxnard4) unstable; urgency=low
+
+  * Bugfix 7527: Don't override VYATTA_PAGER value if it was previously
+    set
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 13 Mar 2012 21:33:56 +0000
+
 vyatta-op (0.13.245+oxnard3) unstable; urgency=low
 
   * ping: fix error handling
