--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.245+oxnard5) unstable; urgency=low
+
+  * Bugfix 7896: make the pppoe log write as the root user
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 13 Mar 2012 22:39:02 +0000
+
 vyatta-op (0.13.245+oxnard4) unstable; urgency=low
 
   * Bugfix 7527: Don't override VYATTA_PAGER value if it was previously
