--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.245+oxnard6) unstable; urgency=low
+
+  * Fix ping
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 13 Mar 2012 15:50:43 -0700
+
 vyatta-op (0.13.245+oxnard5) unstable; urgency=low
 
   * Bugfix 7896: make the pppoe log write as the root user
