--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.256) unstable; urgency=low
+
+  * Use native perl code to figure othe the terminal width
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 08 May 2012 16:00:22 -0700
+
 vyatta-op (0.13.255) unstable; urgency=low
 
   * Use terminal width for interface description wrapping
