--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.258) unstable; urgency=low
+
+  * Add Vyatta wrappers for new keepalived output
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 15 May 2012 11:38:07 -0700
+
 vyatta-op (0.13.257) unstable; urgency=low
 
   * Moved get_terminal_width to Vyatta::Misc
