--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.262) unstable; urgency=low
+
+  * Fix NAT regex and correct log file sort order.
+
+ -- James Davidson <james.davidson@vyatta.com>  Mon, 09 Jul 2012 12:31:39 -0700
+
 vyatta-op (0.13.261) unstable; urgency=low
 
   * Ignore the default vti interface.
