--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.264) unstable; urgency=low
+
+  * Bugfix 8217: VTI: add clear and monitor interfaces commands.
+
+ -- Saurabh Mohan <saurabh@vyatta.com>  Thu, 09 Aug 2012 13:15:44 -0700
+
 vyatta-op (0.13.263) unstable; urgency=low
 
   * Fix NAT regex to also find MASQ logs.
