--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.273) unstable; urgency=low
+
+  * Fix use of LESSCLOSE
+
+ -- James Davidson <james.davidson@vyatta.com>  Tue, 02 Oct 2012 15:47:40 -0700
+
 vyatta-op (0.13.272) unstable; urgency=low
 
   * Fix handling of unknown interface types
