--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.274+pacifica1) unstable; urgency=low
+
+  * new branch
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 12 Oct 2012 18:49:27 -0700
+
 vyatta-op (0.13.274) unstable; urgency=low
 
   * Bugfix 8421: fix show interfaces vrrp detail node to use new syntax
