--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.277) unstable; urgency=low
+
+  * Remove format operational mode commands
+  * Remove install system template
+
+ -- Stephen Hemminger <stephen@networkplumber.org>  Mon, 04 Mar 2013 21:21:36 -0800
+
 vyatta-op (0.13.276) unstable; urgency=low
 
   * Support detection of overlayfs
