--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.279) unstable; urgency=low
+
+  * Bugfix 8830: Fix empty substitution in list search
+
+ -- John Southworth <john.southworth@vyatta.com>  Mon, 01 Apr 2013 10:12:42 -0700
+
 vyatta-op (0.13.278) unstable; urgency=low
 
   * Sync up SNMPv3 support
