--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.275+daisy6) unstable; urgency=low
+
+  * Update DHCP server commands used in "show tech-support"
+
+ -- James Davidson <james.davidson@vyatta.com>  Fri, 24 May 2013 13:37:43 -0700
+
 vyatta-op (0.13.275+daisy5) unstable; urgency=low
 
   * Update "monitor interfaces" generation scripts
