--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.14.0+vyos1+helium1) unstable; urgency=low
+
+  * New branch
+
+ -- Daniil Baturin <daniil@baturin.org>  Sat, 15 Feb 2014 19:45:08 +0100
+
 vyatta-op (0.14.0+hydrogen9) unstable; urgency=low
 
   * Rename s/detailed/detail/ for consistenct with the rest of the
