--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+vyatta-op (0.14.0+vyos1+helium6) unstable; urgency=low
+
+  [ Kim Hagen ]
+  * Bug #71: "show system memory cache" gives "permission denied"
+    message
+
+  [ Daniil Baturin ]
+  * Bug #39: Add op mode commands for sending gratuitous ARP
+    requests/replies.
+
+ -- Daniil Baturin <daniil@baturin.org>  Wed, 02 Jul 2014 01:59:32 +0200
+
 vyatta-op (0.14.0+vyos1+helium5) unstable; urgency=low
 
   * Replace Vyatta with VyOS in "show license" command help.
