--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.14.0+vyos1+helium7) unstable; urgency=low
+
+  * Bug #104: add pipe for stripping private information from config.
+
+ -- Daniil Baturin <daniil@baturin.org>  Wed, 02 Jul 2014 03:47:45 +0200
+
 vyatta-op (0.14.0+vyos1+helium6) unstable; urgency=low
 
   [ Kim Hagen ]
