--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.14.0+vyos1+helium9) unstable; urgency=low
+
+  * Bug #251: add "commands" filter to completion list.
+
+ -- Daniil Baturin <daniil@baturin.org>  Wed, 02 Jul 2014 14:37:04 +0200
+
 vyatta-op (0.14.0+vyos1+helium8) unstable; urgency=low
 
   * Bug #104: add help text for the strip-private pipe.
