--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.14.0+vyos1+helium11) unstable; urgency=low
+
+  * Add Maya calendar support to date commands
+
+ -- Daniil Baturin <daniil@baturin.org>  Mon, 07 Jul 2014 10:56:08 +0200
+
 vyatta-op (0.14.0+vyos1+helium10) unstable; urgency=low
 
   * Add more interface types to "show arp" completion.
