--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.14.0+vyos1+helium13) unstable; urgency=low
+
+  * Boot type check had unionfs hardcoded in it. Now it has overlayfs
+    hardcoded in it.
+
+ -- Daniil Baturin <daniil@baturin.org>  Fri, 25 Jul 2014 08:55:34 +0200
+
 vyatta-op (0.14.0+vyos1+helium12) unstable; urgency=low
 
   * Update package maintainer address.
