--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.14.0+vyos1+helium16) unstable; urgency=low
+
+  * Add an option to disable inotify to fail -f commands.
+
+ -- Daniil Baturin <daniil@baturin.org>  Wed, 08 Oct 2014 18:27:55 +0200
+
 vyatta-op (0.14.0+vyos1+helium15) unstable; urgency=low
 
   [ upa ]
