--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.14.0+vyos2+lithium1) unstable; urgency=low
+
+  * New branch
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Sun, 30 Nov 2014 23:13:05 +0000
+ 
 vyatta-op (0.14.0+vyos1+helium17) unstable; urgency=low
 
   [ Alex Harpin ]
