--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.14.0+vyos2+lithium2) unstable; urgency=low
+
+  * Force release
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Sun, 14 Dec 2014 20:11:37 +0000
+ 
 vyatta-op (0.14.0+vyos2+lithium1) unstable; urgency=low
 
   * New branch
