--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.14.0+vyos2+lithium3) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * Revert "Add an option to disable inotify to fail -f commands."
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Wed, 31 Dec 2014 15:36:15 +0000
+ 
 vyatta-op (0.14.0+vyos2+lithium2) unstable; urgency=low
 
   * Force release
