--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.14.0+vyos2+lithium4) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-op: on shutdown/reboot the client ssh session doesn't disconnect
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Thu, 01 Jan 2015 11:55:53 +0000
+ 
 vyatta-op (0.14.0+vyos2+lithium3) unstable; urgency=low
 
   [ Alex Harpin ]
