--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.14.0+vyos2+lithium5) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-op: fix for show host domain replies (none)
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Wed, 14 Jan 2015 15:49:29 +0000
+
 vyatta-op (0.14.0+vyos2+lithium4) unstable; urgency=low
 
   [ Alex Harpin ]
