--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.14.0+vyos2+lithium6) unstable; urgency=low
+
+  * Bug #456: add simple CLI for iperf.
+
+ -- Daniil Baturin <daniil@baturin.org>  Tue, 20 Jan 2015 15:50:12 +0100
+
 vyatta-op (0.14.0+vyos2+lithium5) unstable; urgency=low
 
   [ Alex Harpin ]
