--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.14.0+vyos1+helium18) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-op: fix for show host domain replies (none)
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Tue, 20 Jan 2015 20:42:19 +0000
+ 
 vyatta-op (0.14.0+vyos1+helium17) unstable; urgency=low
 
   [ Alex Harpin ]
