--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+vyatta-op (0.14.0+vyos2+lithium7) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-op: remove unused reboot configuration nodes
+  * vyatta-op: update the system poweroff cli command to be script based
+  * vyatta-op: final fix for the ssh client failing to disconnect on reboot
+  * vyatta-op: replace 'show shutdown' with 'show poweroff' and use script
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Sun, 25 Jan 2015 09:17:06 +0000
+
 vyatta-op (0.14.0+vyos2+lithium6) unstable; urgency=low
 
   * Bug #456: add simple CLI for iperf.
