--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vyatta-op (0.14.0+vyos1+helium19) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-op: on shutdown/reboot the client ssh session doesn't disconnect
+  * vyatta-op: update the system poweroff cli command to be script based
+  * vyatta-op: final fix for the ssh client failing to disconnect on reboot
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Tue, 24 Feb 2015 22:45:57 +0000
+ 
 vyatta-op (0.14.0+vyos1+helium18) unstable; urgency=low
 
   [ Alex Harpin ]
