--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.14.0+vyos1+helium21) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-op: replace 'show shutdown' with 'show poweroff' and use script 
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Mon, 09 Mar 2015 17:12:53 +0000
+ 
 vyatta-op (0.14.0+vyos1+helium20) unstable; urgency=low
 
   * Bug #377: make commands pipe throw an error in op mode.
