--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.14.0+vyos2+lithium9) unstable; urgency=low
+
+  * Replace the old hypervisor_vendor utility with hvinfo.
+  * Update debian/control to match the reality.
+
+ -- Daniil Baturin <daniil@baturin.org>  Thu, 09 Apr 2015 00:27:36 +0200
+
 vyatta-op (0.14.0+vyos2+lithium8) unstable; urgency=low
 
   * Bug #377: make commands pipe throw an error in op mode.
