--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vyatta-op (0.14.0+vyos2+lithium10) unstable; urgency=low
+
+  [ Alex Harpin]
+  * vyatta-op: strip-private removes "user" rather than actual username
+  * vyatta-op: remove user login public key information with strip-private
+  * vyatta-op: update dh_gencontrol with new development build flag
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Thu, 18 Jun 2015 21:14:17 +0100
+ 
 vyatta-op (0.14.0+vyos2+lithium9) unstable; urgency=low
 
   * Replace the old hypervisor_vendor utility with hvinfo.
