--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.14.0+vyos2+lithium11) unstable; urgency=low
+
+  [ Alex Harpin]
+  * vyatta-op: skip unknown interfaces in "show interfaces counters/detail"
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Mon, 02 Nov 2015 19:39:46 +0000
+ 
 vyatta-op (0.14.0+vyos2+lithium10) unstable; urgency=low
 
   [ Alex Harpin]
