--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+vyatta-op (0.14.0+vyos2+lithium13) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-op: add restart cli command for ntp
+  * vyatta-op: add restart cli command for telnet
+  * vyatta-op: add "check if service is configured" to restart commands
+  * vyatta-op: add restart cli command for snmp
+  * vyatta-op: add restart cli command for ssh
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Sat, 21 Nov 2015 11:30:24 +0000
+ 
 vyatta-op (0.14.0+vyos2+lithium12) unstable; urgency=low
 
   [ Thomas Jepp ]
