--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+vyatta-op (0.14.0+vyos2+current1) unstable; urgency=medium
+
+  [ Thomas Jepp ]
+  * Add missing build depends for Jessie.
+
+  [ Daniil Baturin ]
+  * Remove referenced to Vyatta from 'show version' completion help.
+  * Easter egg: 'show version funny' command that displays limericks after version information.
+
+  [ Kim Hagen ]
+
+ -- Kim Hagen <kim.sidney@gmail.com>  Sun, 24 Jan 2016 15:19:11 -0500
+
 vyatta-op (0.14.0+vyos2+lithium12) unstable; urgency=low
 
   [ Thomas Jepp ]
