Change 'show tech-support' behavior to always strip-private
Using "show tech-support" cmd will produce the tech-support output
without any private information.

Using "show tech-support private" cmd will produce the tech-support
output with private information included.

Note:
=====
The Perl script (vyos-strip-config.pl) used to remove any sensible information
will in addition remove version numbers if they match the regexp below:
  # Strip IPv4 addresses
  $input =~ s/\d+\.\d+\.(\d+)\.(\d+)/xxx.xxx.$1.$2/g if $stripIP;

Example:
========
i  apt                 xxx.xxx.9.8.4 amd64 commandline package manager
ii apt-transport-https xxx.xxx.9.8.4 amd64 https download transport for APT

i  apt                 1.0.9.8.4     amd64 commandline package manager
ii apt-transport-https 1.0.9.8.4     amd64 https download transport for APT

This behavior is present in the current implementation and should be
addressed during the move to the new Python scripts.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vyatta-op (0.14.0+vyos2+current3) unstable; urgency=medium
+
+  * Changed 'show tech-support' implementation to a redacted output, private
+    information is removed.
+  * Added 'show tech-support private' which contains non redacted output
+
+ -- Christian Poessinger <christian@poessinger.com>  Sun Oct 29 15:36:45 2017 +0100
+
 vyatta-op (0.14.0+vyos2+current2) unstable; urgency=medium
 
   * New implementation of "run show version"
