--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ vyatta-op (0.14.0+vyos2+current3) unstable; urgency=medium
     information is removed.
   * Added 'show tech-support private' which contains non redacted output
 
- -- Christian Poessinger <christian@poessinger.com>  Sun Oct 29 15:36:45 2017 +0100
+ -- Christian Poessinger <christian@poessinger.com>  Sun, 29 Oct 2017 15:36:45 +0100
 
 vyatta-op (0.14.0+vyos2+current2) unstable; urgency=medium
 
