--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (1.2.0-1) stable; urgency=medium
+
+  * New branch.
+
+ -- Daniil Baturin <daniil@baturin.org>  Fri, 28 Sep 2018 22:03:28 +0200
+
 vyatta-op (0.14.0+vyos2+current6) unstable; urgency=medium
 
   * T588: Remove DNS forwarder restart command in favor if XML interface definition
