--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vyatta-op (0.14.0+vyos2+current7) unstable; urgency=medium
+
+  * T870: Commit-confirm restarts the server even after commit
+    
+    - show reboot now also show if scheduled via commit-confirm or systemd.
+
+ -- hagbard <vyosdev@derith.de>  Tue, 09 Oct 2018 16:07:22 -0700 
+
 vyatta-op (0.14.0+vyos2+current6) unstable; urgency=medium
 
   * T588: Remove DNS forwarder restart command in favor if XML interface definition
