--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (1.2.0-1) unstable; urgency=medium
+
+  * New release.
+
+ -- Daniil Baturin <daniil@baturin.org>  Sat, 26 Jan 2019 23:36:55 +0100
+
 vyatta-op (0.14.0+vyos2+current8) unstable; urgency=medium
   
   * T963: no authorization logs
