--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (1.2.5) unstable; urgency=low
+
+  * New release.
+
+ -- VyOS maintainers <maintainers@vyos.io>  Mon, 09 Mar 2020 18:50:52 +0200
+
 vyatta-op (1.2.4) unstable; urgency=low
 
   * New release.
