--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
+vyatta-op (1.3-1) unstable; urgency=medium
+
+  * New LTS branch.
+
+ -- Daniil Baturin <daniil@vyos.io>  Mon, 04 Jan 2021 17:21:56 +0200
+
 vyatta-op (0.14.0+vyos2+current8) unstable; urgency=medium
   
   * T963: no authorization logs
-
 
  -- hagbard <vyosdev@derith.de>  Wed, 07 Nov 2018 12:38:20 -0800
 
